<resources>
    <string name="app_name">Heartware</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_beneficiary_profile_page">BeneficiaryProfilePage</string>
    <string name="benName">Association for Persons with Special Needs</string>
    <string name="benDes">Empowered Lives for An Engaged Community and Inclusive Society.</string>
    <string name="benLink">LEARN MORE ABOUT ASPN</string>
    <string name="currCam">Existing Campaigns</string>
    <string name="oldCam">Past Campaigns</string>
    <string name="createCam">Create New</string>
    <string name="createCamPage">Create New Campaign</string>
    <string name="campaignName">Insert Campaign Name</string>
    <string name="title_activity_start_campaign">StartCampaign</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_view_campaign">ViewCampaign</string>
    <string name="title_activity_volunteer_for_campaign">VolunteerForCampaign</string>
    <string name="title_activity_donate_to_campaign">DonateToCampaign</string>
    <string name="title_activity_collect_for_campaign">CollectForCampaign</string>
    <string name="title_activity_profile_page">ProfilePage</string>

</resources>
