<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.renlingfei.heartware.BeneficiaryProfilePage">
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:menu="@menu/bottom_nav_items"
        app:itemBackground="@color/gray"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/benName"
        android:src="@drawable/benlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benName"
        android:textStyle="bold"
        android:id="@+id/benName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/benDes"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:id="@+id/benDes"
        android:padding="5dp"
        android:layout_below="@id/benName"/>

    <Button
        android:id="@+id/learnButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/benDes"
        android:text="@string/benLink" />

    <TextView
        android:id="@+id/currCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/learnButton"
        android:text="@string/currCam"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"/>

    <HorizontalScrollView
        android:id="@+id/currCamScroll"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/currCam"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:id="@+id/addCamButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/createCam" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/currCamPicBenProf1"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/currcampic1"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="UpReCycle"/>

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/currCamPicBenProf2"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/currcampic2"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="Zero Waste"/>

            </TableRow>
        </TableLayout>
    </HorizontalScrollView >

    <TextView
        android:id="@+id/oldCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/currCamScroll"
        android:text="@string/oldCam"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"/>

    <HorizontalScrollView
        android:id="@+id/oldCamScroll"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/oldCam"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/oldCamPicBenProf1"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/oldcampic1"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="UpReCycle"/>

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/oldCamPic2BenProf"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/oldcampic2"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="COLLECT"/>
                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/oldCamPic3BenProf"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/oldcampic3"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="REcycle"/>
                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/oldCamPic4BenProf"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/oldcampic4"
                    android:scaleType="centerCrop"
                    android:backgroundTint="#80FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="Collection"/>

            </TableRow>
        </TableLayout>
    </HorizontalScrollView >


</RelativeLayout>
